--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.0.7",
+    "@react-navigation/drawer": "^5.0.7",
     "@react-navigation/native": "^5.0.7",
     "expo": "~36.0.0",
     "react": "~16.9.0",
